--- a/06_DOM/one.html
+++ b/06_DOM/one.html
@@ -16,7 +16,73 @@
 <body id="title" class="body">
     <div id = "container" class="div">
         <h1 id="heading">GOOGLE <span class="display">.COM</span> </h1>
-         <p>Welcome to google</p>
+        <h2 class="intro">Lorem ipsum dolor sit amet consectetur.</h2>
+        <h2 class="intro">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+        <input type="password" name="" id="">
+        <p>Welcome to google</p>
+        <ul>
+            <li class="mylist">one</li>
+            <li class="mylist">two</li>
+            <li class="mylist">three</li>
+        </ul>
     </div>
 </body>
 </html>
+
+
+
+
+<!-- document.querySelectorAll('.forclass')
+document.querySelectorAll('.forId')
+document.querySelectorAll('for tag') -->
+
+
+<!-- you can apply foreach in nodelist by not in html collection -->
+
+
+
+<!-- /*
+document.querySelector('ul')
+const myul = document.querySelector('ul')
+const first_li = myul.querySelector('li')
+first_li.style.backgroundColor='green'
+
+
+//for changing text
+first_li.innerText = 'five'
+*/ -->
+
+
+
+
+<!-- //for querySelectorAll
+you get nodelist
+but it is not an array
+so map not work
+syntax
+
+
+const temp = document.querySelectorAll('li')
+temp[0].style.color='green'
+'green' -->
+
+<!-- const temp = document.querySelectorAll('li')
+temp.for
+temp.forEach(()=>{})
+
+temp.forEach((l)=>{
+    l.style.color='green'
+}) -->
+
+
+
+
+<!-- //from classname you get node list also it is not an array
+
+
+converting html collection into array
+const temp = document.getElementByClassName('mylist')
+const myArr = Array.from(temp)
+myArr.forEach((l)=>{
+    l.style.color='grey'
+}) -->
