basic dom (selectors)

--- a/06_DOM/one.html
+++ b/06_DOM/one.html
@@ -35,6 +35,7 @@
 <!-- document.querySelectorAll('.forclass')
 document.querySelectorAll('.forId')
 document.querySelectorAll('for tag') -->
+<!-- document.querySelector('body') -->
 
 
 <!-- you can apply foreach in nodelist by not in html collection -->
