events(bubbling,capturing,stop-propagation,prevent-defalut),project

--- a/08_Events/one.html
+++ b/08_Events/one.html
@@ -45,9 +45,9 @@
 
      //event propagation
  
-      addEventListener(event,function,useCapture)
-      default value = false-> bubbling activate
-      true-> capturing activate
+    //   addEventListener(event,function,useCapture)
+    //   default value = false-> bubbling activate
+    //   true-> capturing activate
 
       document.getElementById('images').addEventListener('click',(e)=>{
         console.log('images button clicked')
